<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2013 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources>
    <string name="ble_not_supported">BLE is not supported</string>
    <string name="label_device_address">Device address:</string>
    <string name="label_state">State:</string>

    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>

    <string name="unknown_device">Unknown device</string>
    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="unknown_service">Unknown service</string>

    <string name="no_data">no data</string>
    <string name="ambientLight_title">ambient light</string>
    <string name="temperature_title">temperature</string>
    <string name="humidity_title">humidity</string>
    <string name="pressure_title">pressure</string>
    <string name="search_title">Searching for  Hexiwear</string>


    <!-- Yodiwo-related settings -->
    <!-- ======================= -->

    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_pairing">PairingActivity</string>
    <string name="action_repairing">Pairing</string>

    <!-- UI Settings  -->
    <string name="main_label">Android Node</string>
    <string name="pref_device_name_key">device_name</string>
    <string name="pref_device_name_default">hexiwear</string>

    <!-- Rest Settings  -->
    <string name="pref_server_address_key">server_address</string>
    <string name="pref_server_address_default">cyan.yodiwo.com</string>
    <string name="pref_server_use_ssl_key">server_use_ssl</string>
    <string name="pref_server_use_ssl_default">true</string>
    <string name="title_activity_pairing_web">PairingWebActivity</string>

    <!-- MQTT Settings -->
    <string name="pref_mqtt_address_key">mqtt_address</string>
    <string name="pref_mqtt_address_default">api.yodiwo.com</string>
    <string name="pref_mqtt_use_ssl_key">mqtt_use_ssl</string>
    <string name="pref_mqtt_use_ssl_default">true</string>

    <!-- Pairing Settings  -->
    <string name="pref_pairing_uuid_key">pairing_uuid</string>
    <string name="pref_pairing_nodekey_key">pairing_node_key</string>
    <string name="pref_pairing_nodesecret_key">pairing_node_secret</string>
    <string name="pref_pairing_token1_key">pairing_token1_key</string>
    <string name="pref_pairing_token2_key">pairing_token2_key</string>

    <!-- Node Settings -->
    <string name="pref_node_things_revnum">node_things_revnum</string>

    <string name="pref_service_yodiup_address_key">service_yodiup_address_key</string>
    <string name="pref_service_yodiup_address_title">YodiUp Address</string>
    <string name="pref_service_yodiup_address_default">https://up.yodiwo.com</string>
</resources>