<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:key="device_settings"
        android:title="Device settings">

        <EditTextPreference
            android:defaultValue="@string/pref_device_name_default"
            android:inputType="text"
            android:key="@string/pref_device_name_key"
            android:singleLine="true"
            android:title="Name" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="server_settings"
        android:title="Server settings">

        <EditTextPreference
            android:defaultValue="@string/pref_server_address_default"
            android:inputType="text"
            android:key="@string/pref_server_address_key"
            android:singleLine="true"
            android:title="Address" />

        <SwitchPreference
            android:defaultValue="@string/pref_server_use_ssl_default"
            android:key="@string/pref_server_use_ssl_key"
            android:title="Use SSL" />

        <EditTextPreference
            android:defaultValue="@string/pref_service_yodiup_address_default"
            android:inputType="text"
            android:key="@string/pref_service_yodiup_address_key"
            android:singleLine="true"
            android:title="@string/pref_service_yodiup_address_title" />
    </PreferenceCategory>


    <PreferenceCategory
        android:key="mqtt_settings"
        android:title="MQTT Settings">

        <EditTextPreference
            android:defaultValue="@string/pref_mqtt_address_default"
            android:inputType="text"
            android:key="@string/pref_mqtt_address_key"
            android:singleLine="true"
            android:title="Address" />

        <SwitchPreference
            android:defaultValue="@string/pref_mqtt_use_ssl_default"
            android:key="@string/pref_mqtt_use_ssl_key"
            android:title="Use SSL" />

    </PreferenceCategory>

</PreferenceScreen>
